--- a/detailProduit.html
+++ b/detailProduit.html
@@ -13,7 +13,7 @@
             <button class="btn-retour">
                 <i data-lucide="arrow-left"></i>
             </button>
-            <div class="logo">Markgros</div>
+            <img class="logo" src="img/logoMarkgros.png" alt="logoMarkgros">
         </div>
 
         <div class="section-principale">
