page detail produit MODIFIER

--- a/detailProduit.html
+++ b/detailProduit.html
@@ -13,7 +13,7 @@
             <button class="btn-retour">
                 <i data-lucide="arrow-left"></i>
             </button>
-            <img class="logo" src="img/logoMarkgros.png" alt="logoMarkgros">
+            <img class="logo" src="img/logoMarkgrosVari.png" alt="logoMarkgros">
         </div>
 
         <div class="section-principale">
