page info perso TERMINER

--- a/html/detailProduit.html
+++ b/html/detailProduit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/detailProduit.css">
+    <link rel="stylesheet" href="../css/detailProduit.css">
     <script src="https://cdn.jsdelivr.net/npm/lucide@latest/dist/umd/lucide.min.js"></script>
 </head>
 <body>
@@ -13,13 +13,13 @@
             <button class="btn-retour">
                 <i data-lucide="arrow-left"></i>
             </button>
-            <img class="logo" src="img/logoMarkgrosVari.png" alt="logoMarkgros">
+            <img class="logo" src="../img/logoMarkgrosVari.png" alt="logoMarkgros">
         </div>
 
         <div class="section-principale">
             <!-- Image produit -->
             <div class="image-produit">
-                <img src="img/four.jpg" alt="Four électrique" />
+                <img src="../img/four.jpg" alt="Four électrique" />
             </div>
 
             <!-- Infos produit -->
@@ -70,7 +70,7 @@
                 <div class="grille-produits">
                     <div class="carte-produit">
                         <div class="badge-nouveau">Nouveau</div>
-                        <img src="img/refrig.jpg" alt="Fer à Vapeur" />
+                        <img src="../img/refrig.jpg" alt="Fer à Vapeur" />
                         <h3 class="titre">Fer à Vapeur</h3>
                         <p class="prix">5 000 FCFA</p>
                         <div class="evaluation">⭐⭐⭐⭐⭐</div>
@@ -87,7 +87,7 @@
 
                     <div class="carte-produit">
                         <div class="badge-nouveau">Nouveau</div>
-                        <img src="img/fervapeur.jpg" alt="Fer à Vapeur" />
+                        <img src="../img/fervapeur.jpg" alt="Fer à Vapeur" />
                         <h3 class="titre">Fer à Vapeur</h3>
                         <p class="prix">5 000 FCFA</p>
                         <div class="evaluation">⭐⭐⭐⭐⭐</div>
