--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Accueil</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>Ceci est la page centrale</h1>
+    <div class="container">
+        <img src="./img/logoMarkgros.png" alt="Logo" class="logo">
+        <p class="description">La plateforme qui facilite la vente en ligne des produits électroménagers</p>
+        <div class="btn-group">
+            <a href="inscription.html" class="btn btn-signup">S'inscrire</a>
+            <a href="connexion.html" class="btn btn-login">Se connecter</a>
+        </div>
+        <a href="accueil.html" class="ignore">Ou ignorer</a>
+    </div>
 </body>
 </html>
